# Streifenprojektion

./: .gitignore  pack.sh
ausarbeitung/: Streifenprojektion.bib  Streifenprojektion.tex  Streifenprojektion_Title.tex
ausarbeitung/imagesrc/: classdiagram.class.violet.html  classdiagram_base.class.violet.html  classdiagram_control.class.violet.html
ausarbeitung/includes/: classdiagram.class.violet.html  hardware_schematic.eps  histogram_diff_rotate_blue_normal_300.csv  histogram_free_rotate_blue_normal_300.csv  perspective.eps  perspective2.eps  software_controller.eps  triangulation2d.eps  triangulation3d.eps  triangulation_skew_pitch.eps
camcapture/: CMakeLists.txt
camcapture/src/: main.cpp
hardware/servoctl-device/: main.ino
hardware/servoctl-host/: main.cpp  servoctl-host.pro
plot/: CMakeLists.txt  README.md
plot/src/: camera.h  camerafigure.cpp  camerafigure.h  configuration.cpp  configuration.h  drawable.cpp  drawable.h  gshader.cpp  gshader.h  gshaderprogram.cpp  gshaderprogram.h  laserfigure.cpp  laserfigure.h  main.cpp  plot3d.cpp  plot3d.h  point.h  pointcloud.cpp  pointcloud.h
praesentation/: Streifenprojektion.tex  beamercolorthemehuberlin.sty
praesentation2/: Streifenprojektion.tex  beamerouterthemehuberlin.sty  beamerouterthemesplitinfo.sty  beamerthemeBerlinHUB.sty
prototype0/: CMakeLists.txt  main.cpp
prototype1/: CMakeLists.txt  README.md  prototype1.pro
prototype1/include/: camera.h  commandcontroller.h  common.h  configuration.h  controller.h  defaultlinedetector.h  defaultreconstructor.h  deviceconfiguration.h  difflightbardetector.h  edgelightbardetector.h  freelightbardetector.h  laser.h  lightbardetector.h  line.h  linedetector.h  peaklightbardetector.h  pointcloud.h  reconstruction.h  reconstructor.h  rotatescancontroller.h  scancontroller.h  serial.h  servo.h  singleton.h  translatescancontroller.h
prototype1/src/: camera.cpp  commandcontroller.cpp  configuration.cpp  configuration.h  controller.cpp  defaultlinedetector.cpp  defaultlinedetector.h  defaultreconstructor.cpp  defaultreconstructor.h  deviceconfiguration.cpp  difflightbardetector.cpp  edgelightbardetector.cpp  freelightbardetector.cpp  laser.cpp  lightbardetector.cpp  line.cpp  linedetector.cpp  linedetector.h  main.cpp  peaklightbardetector.cpp  pointcloud.cpp  reconstruction.cpp  reconstructor.cpp  rotatescancontroller.cpp  scancontroller.cpp  serial.cpp  servo.cpp  servo.cpp.autosave  translatescancontroller.cpp
prototype1_test/: prototype1_test.pri  prototype1_test.pro
test/: commandcreator.cpp
test/dist_test/: notes
tests/: README.md  rotate_blue_200_dt_0.cmds  rotate_blue_300_d_0.cmds  rotate_blue_300_dt_0.cmds  rotate_blue_300_t_0.cmds  rotate_blue_400_dt_0.cmds  rotate_blue_500_dt_0.cmds  rotate_green_300_dt_0.cmds  rotate_orange_300_dt_0.cmds  rotate_red_300_dt_0.cmds  rotate_yellow_300_dt_0.cmds
tools/: CMakeLists.txt  README.md
tools/color/: main.cpp
tools/getenv/: main.cpp
tools/lib/: arguments.cpp
tools/lib/include/: arguments.h  point.h  pointio.h  vec.h
tools/stats/: common.h  distribution.cpp  main.cpp  scatterplot.cpp
tools/truncate/: main.cpp
zwischenpraesentation/: ShapeFromX.tex
(+7 files in other folders)
